Amplify color added. Post processing set for project.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 /[Aa]ssets/[Aa]ura 2/
+/[Aa]ssets/[Aa]mplifyColor/
+
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
 
